# legal-documents-generator

./: .env.langfuse.example  .gitignore  .master.md  CHANGELOG.md  Makefile  README.md  config.yaml  config_quality.yaml  docker-compose.langfuse.yml  docker-compose.prefect.yml  generator.py  generator_versions.yaml  main.py  prefect_pipeline.py  pyproject.toml  visualize.py
config_case/: case_1.yaml  case_1_variant_2.yaml
configs/: workflow_prompts.yaml
docs/: code_quality_user_story.md  generated_document_analysis_guide.md  observability_scaling_user_story.md  prefect_end_to_end_map.md  productisation_user_story.md  workflow_map.md
prompts/: section_contracts.yaml  workflow_prompts.yaml
schemas/: en_indictment_financial_fraud_001.json  en_indictment_financial_fraud_002.json  en_indictment_financial_fraud_003.json  en_indictment_financial_fraud_004.json  en_indictment_financial_fraud_005.json  en_indictment_financial_fraud_006.json  en_indictment_financial_fraud_007.json
scripts/: apple_studio_prefect_run.sh  smoke_gemini_config.py  smoke_model_routes.py  smoke_prompt_contract.py
src/synthetic_ner/: __init__.py  case.py  case_entities.py  cli.py  config.py  constants.py  engine.py  prefect_pipeline.py  recover.py  schema.py  sync_langfuse_prompts.py  utils.py  version.py
src/synthetic_ner/models/: factory.py  gemini_client.py  ollama_client.py
src/synthetic_ner/tasks/: critic.py  (+15 more)
templates/: en_court_decision.j2  en_indictment.j2
tests/integration/: test_run_document_graph_validators.py
tests/synthetic_ner/: test_groundtruth_rows.py  test_version.py
(+59 files in other folders)
